# nishika-competition

./: .env  .gitignore  README.md  README_repo.md  entry_points.md  pyproject.toml  run.sh
aozora/: file_list.txt  format_dirname.py  make_lm_train_text.py  make_segments.py  unzip_all.py
config/: best_decode_config.yaml  decode_config.yaml  decode_config_v10.yaml  decode_config_v2.yaml  decode_config_v3.yaml  decode_config_v4.yaml  decode_config_v5.yaml  decode_config_v9.yaml
config/.ipynb_checkpoints/: decode_config_v6-checkpoint.yaml  decode_config_v7-checkpoint.yaml
nishika-recipe/: run.sh
nishika-recipe/conf/: train_asr_reazon_ft.yaml  train_lm_reazon.yaml
nishika-recipe/local/: data.sh
src/: asr.py  format_data.py  inference.py  inference_parallel.py  inference_with_step_log.py  speech_to_text.py  vad.py
